# trustguard-xdr-mock

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: dependencies.py  responses.py  routes_export.py  routes_extensions.py  routes_mock.py  routes_official.py  routes_query.py  routes_validate.py
app/generators/: exporter.py  loader.py  synthetic.py
app/models/: __init__.py  alert.py  common.py  dns_log.py  endpoint_behavior.py  endpoint_security.py  enums.py  incident.py  network_security.py  process_chain.py  registry.py
app/repositories/: __init__.py  xdr_repository.py
app/scenarios/: __init__.py  false_positive_powershell.py  registry.py
app/signing/: auth_code.py  canonical.py  signer.py  verifier.py
app/validators/: enum_check.py  format_check.py  logtrace.py  registry.py  state_machine.py  time_invariants.py
examples/: apifox-pre-request-sign.js
tests/: conftest.py  test_api.py  test_signing.py  test_stateful_mock.py  test_validators.py
